--- a/GiantappConfiger/ConfierControl.xaml
+++ b/GiantappConfiger/ConfierControl.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
-    x:Class="GiantappConfiger.WPF.JsonConfierControl"
+    x:Class="GiantappConfiger.ConfierControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:GiantappConfiger.WPF"
+    xmlns:local="clr-namespace:GiantappConfiger"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="clr-namespace:GiantappConfiger.Models"
     x:Name="usercontrol"
@@ -19,8 +19,8 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="{Binding Column0Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:JsonConfierControl}}" />
-            <ColumnDefinition Width="{Binding Column1Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:JsonConfierControl}}" />
+            <ColumnDefinition Width="{Binding Column0Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfierControl}}" />
+            <ColumnDefinition Width="{Binding Column1Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfierControl}}" />
         </Grid.ColumnDefinitions>
         <TreeView
             x:Name="tree"
