--- a/GiantappConfiger/Editors.xaml
+++ b/GiantappConfiger/Editors.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:GiantappConfiger"
-    xmlns:rules="clr-namespace:GiantappConfiger.WPF.ValidationRules">
+    xmlns:rules="clr-namespace:GiantappConfiger.ValidationRules">
 
     <local:TemplateSelector x:Key="TemplateSelector" />
     <local:NameConveter x:Key="NameConveter" />
