--- a/GiantappConfiger/ConfigControl.xaml
+++ b/GiantappConfiger/ConfigControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="GiantappConfiger.ConfierControl"
+    x:Class="GiantappConfiger.ConfigControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -19,8 +19,8 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="{Binding Column0Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfierControl}}" />
-            <ColumnDefinition Width="{Binding Column1Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfierControl}}" />
+            <ColumnDefinition Width="{Binding Column0Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfigControl}}" />
+            <ColumnDefinition Width="{Binding Column1Width, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=local:ConfigControl}}" />
         </Grid.ColumnDefinitions>
         <TreeView
             x:Name="tree"
