--- a/GiantappConfiger/ConfigControl.xaml
+++ b/GiantappConfiger/ConfigControl.xaml
@@ -36,7 +36,7 @@
                 </Style>
             </TreeView.ItemContainerStyle>
             <TreeView.Resources>
-                <HierarchicalDataTemplate DataType="{x:Type models:NodeInfo}" ItemsSource="{Binding Children}">
+                <HierarchicalDataTemplate DataType="{x:Type models:ConfigItemNode}" ItemsSource="{Binding Children}">
                     <TextBlock Text="{Binding Converter={StaticResource NameConveter}}" ToolTip="{Binding DescLanKey}" />
                 </HierarchicalDataTemplate>
             </TreeView.Resources>
