--- a/Sample.WPF/JsonWindow.xaml
+++ b/Sample.WPF/JsonWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:giantappconfiger="clr-namespace:GiantappConfiger;assembly=GiantappConfiger"
     xmlns:local="clr-namespace:Sample.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="MainWindow"
@@ -10,6 +11,7 @@
     Height="450"
     mc:Ignorable="d">
     <Grid x:Name="grid">
+        <giantappconfiger:ConfigControl x:Name="configer" />
         <Button
             Width="50"
             Height="20"
