--- a/GiantappConfiger/Views/Editors.xaml
+++ b/GiantappConfiger/Views/Editors.xaml
@@ -148,4 +148,26 @@
             </ComboBox>
         </Grid>
     </DataTemplate>
+
+    <DataTemplate x:Key="ListEditor">
+        <Grid Margin="0,2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition MaxWidth="100" SharedSizeGroup="desc" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock
+                VerticalAlignment="Center"
+                Style="{StaticResource TextBlock_Desc}"
+                Text="{Binding Converter={StaticResource NameConveter}}"
+                ToolTip="{Binding Converter={StaticResource DescConveter}}">
+                <Run Text=":" />
+            </TextBlock>
+            <ItemsControl
+                Grid.Column="1"
+                Grid.ColumnSpan="2"
+                ItemsSource="{Binding Value}" />
+            <Button Grid.Column="2">+</Button>
+        </Grid>
+    </DataTemplate>
 </ResourceDictionary>
