--- a/GiantappConfiger/Views/Editors.xaml
+++ b/GiantappConfiger/Views/Editors.xaml
@@ -16,6 +16,10 @@
         <Setter Property="HorizontalAlignment" Value="Stretch" />
         <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
+    <Style x:Key="Btn_Operation" TargetType="Button">
+        <Setter Property="Width" Value="22" />
+        <Setter Property="Height" Value="22" />
+    </Style>
     <DataTemplate x:Key="StringEditor">
         <Grid Margin="0,5">
             <Grid.ColumnDefinitions>
@@ -164,10 +168,54 @@
                 <Run Text=":" />
             </TextBlock>
             <ItemsControl
+                x:Name="rootItemsControl"
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
-                ItemsSource="{Binding Value}" />
-            <Button Grid.Column="2" Command="{Binding AddItemCommand}">+</Button>
+                Margin="10"
+                Padding="10"
+                BorderBrush="Gray"
+                BorderThickness="0"
+                ItemsSource="{Binding Value}">
+                <ItemsControl.ItemTemplate>
+                    <ItemContainerTemplate>
+                        <DockPanel Margin="10">
+                            <Button
+                                Command="{Binding Parent.DataContext.DeleteItemCommand, ElementName=rootItemsControl}"
+                                CommandParameter="{Binding}"
+                                DockPanel.Dock="Right"
+                                Style="{StaticResource Btn_Operation}">
+                                x
+                            </Button>
+                            <ItemsControl
+                                BorderBrush="Gray"
+                                BorderThickness="0,0,0,0"
+                                DockPanel.Dock="Left"
+                                ItemTemplateSelector="{StaticResource TemplateSelector}"
+                                ItemsSource="{Binding}">
+                                <ItemsControl.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <UniformGrid Columns="{Binding Count}" />
+                                    </ItemsPanelTemplate>
+                                </ItemsControl.ItemsPanel>
+                            </ItemsControl>
+                        </DockPanel>
+                    </ItemContainerTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+            <Button
+                Grid.Column="2"
+                VerticalAlignment="Top"
+                Command="{Binding AddItemCommand}"
+                Style="{StaticResource Btn_Operation}">
+                +
+            </Button>
+            <!--<Button
+                Grid.Column="2"
+                VerticalAlignment="Top"
+                Command="{Binding DeleteItemCommand}"
+                CommandParameter="{Binding}"
+                Content="{Binding Value, Mode=OneWay}"
+                Style="{StaticResource Btn_Operation}" />-->
         </Grid>
     </DataTemplate>
 </ResourceDictionary>
