--- a/GiantappConfiger/Views/Editors.xaml
+++ b/GiantappConfiger/Views/Editors.xaml
@@ -178,63 +178,66 @@
     </DataTemplate>
 
     <DataTemplate x:Key="ListEditor" DataType="{x:Type models:ConfigItemProperty}">
-        <Grid Margin="0,2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition MaxWidth="100" SharedSizeGroup="desc" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-            <TextBlock
-                VerticalAlignment="Center"
-                Style="{StaticResource TextBlock_Desc}"
-                Text="{Binding Converter={StaticResource NameConveter}}"
-                ToolTip="{Binding Converter={StaticResource DescConveter}}">
-                <Run Text=":" />
-            </TextBlock>
-            <ItemsControl
-                x:Name="rootItemsControl"
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                Margin="10"
-                Padding="10"
-                BorderBrush="Gray"
-                BorderThickness="0"
-                ItemsSource="{Binding Value}">
-                <ItemsControl.ItemTemplate>
-                    <ItemContainerTemplate>
-                        <DockPanel Margin="10">
-                            <Button
-                                Command="{Binding Parent.DataContext.DeleteItemCommand, ElementName=rootItemsControl}"
-                                CommandParameter="{Binding}"
-                                DockPanel.Dock="Right"
-                                Style="{StaticResource Btn_Operation}"
-                                Visibility="{Binding Parent.DataContext.Descriptor.CanRemoveItem, ElementName=rootItemsControl, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                x
-                            </Button>
-                            <ItemsControl
-                                BorderBrush="Gray"
-                                BorderThickness="0,0,0,0"
-                                DockPanel.Dock="Left"
-                                ItemTemplateSelector="{StaticResource TemplateSelector}"
-                                ItemsSource="{Binding}">
-                                <ItemsControl.ItemsPanel>
-                                    <ItemsPanelTemplate>
-                                        <UniformGrid Columns="{Binding Count}" />
-                                    </ItemsPanelTemplate>
-                                </ItemsControl.ItemsPanel>
-                            </ItemsControl>
-                        </DockPanel>
-                    </ItemContainerTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-            <Button
-                Grid.Column="2"
-                VerticalAlignment="Top"
-                Command="{Binding AddItemCommand}"
-                Style="{StaticResource Btn_Operation}"
-                Visibility="{Binding Descriptor.CanAddItem, Converter={StaticResource BooleanToVisibilityConverter}}">
-                +
-            </Button>
-        </Grid>
+        <Border>
+            <Grid Margin="0,2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition MaxWidth="100" SharedSizeGroup="desc" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Style="{StaticResource TextBlock_Desc}"
+                    Text="{Binding Converter={StaticResource NameConveter}}"
+                    ToolTip="{Binding Converter={StaticResource DescConveter}}">
+                    <Run Text=":" />
+                </TextBlock>
+                <ItemsControl
+                    x:Name="rootItemsControl"
+                    Grid.Column="1"
+                    Grid.ColumnSpan="2"
+                    Margin="0,10,0,10"
+                    Padding="0,10,0,10"
+                    BorderBrush="Gray"
+                    BorderThickness="0"
+                    ItemsSource="{Binding Value}">
+                    <ItemsControl.ItemTemplate>
+                        <ItemContainerTemplate>
+                            <DockPanel Margin="10">
+                                <Button
+                                    Command="{Binding Parent.DataContext.DeleteItemCommand, ElementName=rootItemsControl}"
+                                    CommandParameter="{Binding}"
+                                    DockPanel.Dock="Right"
+                                    Style="{StaticResource Btn_Operation}"
+                                    Visibility="{Binding Parent.DataContext.Descriptor.CanRemoveItem, ElementName=rootItemsControl, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                    x
+                                </Button>
+                                <ItemsControl
+                                    Padding="10"
+                                    BorderBrush="Gray"
+                                    BorderThickness="1"
+                                    DockPanel.Dock="Left"
+                                    ItemTemplateSelector="{StaticResource TemplateSelector}"
+                                    ItemsSource="{Binding}">
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <UniformGrid Columns="1" />
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                </ItemsControl>
+                            </DockPanel>
+                        </ItemContainerTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+                <Button
+                    Grid.Column="2"
+                    VerticalAlignment="Top"
+                    Command="{Binding AddItemCommand}"
+                    Style="{StaticResource Btn_Operation}"
+                    Visibility="{Binding Descriptor.CanAddItem, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    +
+                </Button>
+            </Grid>
+        </Border>
     </DataTemplate>
 </ResourceDictionary>
